// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  ADMIN
  CUSTOMER
}

enum OrderStatus {
  PENDING
  PAID
  SHIPPED
  DELIVERED
  CANCELED
}

model Category {
  id        String    @id
  name      String    @unique
  isDeleted Boolean   @default(false) @map("is_deleted")
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")
  products  Product[]

  @@map("categories")
}

model Product {
  id          String  @id
  name        String
  description String?
  price       Decimal
  stock       Int
  idDeleted   Boolean @default(false) @map("is_deleted")

  category   Category? @relation(fields: [categoryId], references: [id])
  categoryId String?   @map("category_id")

  createdAt DateTime  @default(now()) @map("created_at")
  updateAt  DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  orderItems OrderItem[]
  reviews    Review[]

  @@map("products")
}

model User {
  id                String   @id
  name              String
  email             String   @unique
  passwordValue     String   @map("password_value")
  passwordSalt      String   @map("password_salt")
  passwordAlgorithm String   @map("password_algorithm")
  role              UserRole
  isDeleted         Boolean  @default(false)

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  orders  Order[]
  reviews Review[]

  @@map("users")
}

model Order {
  id              String      @id
  totalPrice      Decimal     @map("total_price")
  status          OrderStatus
  deliveryAddress String      @map("delivery_address")
  isDeleted       Boolean     @default(false) @map("is_deleted")
  items           OrderItem[]

  userId String @map("user_id")
  user   User   @relation(fields: [userId], references: [id])

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime?

  @@map("orders")
}

model OrderItem {
  id        String  @id
  quantity  Int
  unitPrice Decimal @map("unit_price")
  isDeleted Boolean @default(false) @map("is_deleted")

  orderId String @map("order_id")
  order   Order  @relation(fields: [orderId], references: [id])

  productId String  @map("product_id")
  product   Product @relation(fields: [productId], references: [id])

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  @@map("order_items")
}

model Review {
  id        String  @id
  rating    Int
  isDeleted Boolean @default(false)

  product   Product? @relation(fields: [productId], references: [id])
  productId String?

  user   User?   @relation(fields: [userId], references: [id])
  userId String?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?
}
