---
title: FerdShop Database Diagram
---
erDiagram
  USER ||--o{ ORDER : places
  ORDER ||--|{ ORDER_ITEM : contains
  PRODUCT ||--o{ ORDER_ITEM : appearIn
  CATEGORY ||--o{ PRODUCT : classifies

  USER ||--o{ REVIEW : writes
  PRODUCT ||--o{ REVIEW : receives

  CATEGORY {
      uuid id_PK
      string name_UNIQUE
      boolean isDeleted
      date createdAt
      date updatedAt
      date deleteAt
  }

  PRODUCT {
      uuid id_PK
      string name
      string description
      numeric price
      int stock
      boolean isDeleted
      uuid categoryId_FK
      date createdAt
      date updatedAt
      date deletedAt
  }

  USER {
      uuid id_PK
      string name
      string email_UNIQUE
      string password
      enum role
      boolean isDeleted
      date createdAt
      date updatedAt
      date deletedAt
  }

  ORDER {
      uuid id_PK
      uuid userId_FK
      numeric totalPrice
      enum status
      string deliveryAddress
      boolean isDeleted
      date createdAt
      date updatedAt
      date deletedAt
  }

  ORDER_ITEM {
      uuid id_PK
      uuid orderId_FK
      uuid productId_FK
      int quantity
      numeric unitPrice
      boolean isDeleted
      date createdAt
      date updatedAt
      date deletedAt
  }

  REVIEW {
      uuid id_PK
      uuid userId_FK
      uuid productId_FK
      int rating
      boolean isDeleted
      date createdAt
      date updatedAt
      date deletedAt
  }
